5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1616_2921.log
== TEST (2019-04-01 14:24:06) 
-- CODE:

d = 25%
print(float("totaljogo2"))
totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100)) 
round(x,2)
-- ERROR:
File "XXXX", line 2
    d = 25%
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:24:13) 
-- CODE:
print(float("totaljogo2"))
totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100)) 
round(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(float("totaljogo2"))
ValueError: could not convert string to float: 'totaljogo2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:24:28) 
-- CODE:
print(float("total jogo 2:"))
totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100)) 
round(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(float("total jogo 2:"))
ValueError: could not convert string to float: 'total jogo 2:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:24:40) 
-- CODE:
print("total jogo 2:")
totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100)) 
round(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100)) 
NameError: name 'precojogo2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:24:40) 
-- CODE:
print("total jogo 2:")
totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100)) 
round(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100)) 
NameError: name 'precojogo2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:24:54) 
-- CODE:
print("valor do jogo:")
totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100)) 
round(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100)) 
NameError: name 'precojogo2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:24:59) 
-- CODE:
print("valor do jogo:")
totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100)) 
round(x,2)
-- EXECUTION TIME:
0.119223
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2921/main.py", line 2, in <module>
    totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100)) 
NameError: name 'precojogo2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:35:06) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
int(input("valor do jogo:"))
round(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:41:59) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
x = float(input("valor do jogo1:"))
y = float(input("valor do jogo2:"))
s = x + y 
round(s,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:42:52) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
x = float(input("valor do jogo1:"))
y = float(input("valor do jogo2:"))
s = input(x + y)
round(s,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = input(x + y)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:43:03) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
x = float(input("valor do jogo1:"))
y = float(input("valor do jogo2:"))
s = input(x + y)
round(s,2)
-- EXECUTION TIME:
0.211266
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2921/main.py", line 4, in <module>
    s = input(x + y)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:11) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
x = float(input("valor do jogo1:"))
y = float(input("valor do jogo2:"))
s = input(x + y)
round(s,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = input(x + y)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:46:58) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
x = float(input("valor do jogo1:"))
y = int(input("valor do jogo2:"))
s = input(x + y)
round(s,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    y = int(input())
ValueError: invalid literal for int() with base 10: '89.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:47:21) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
x = float(input("valor do jogo1:"))
y = int(input("valor do jogo2:"))
s = input(x + y)
round(s,2)
-- EXECUTION TIME:
0.187204
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2921/main.py", line 3, in <module>
    y = int(input())
ValueError: invalid literal for int() with base 10: '89.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:49:20) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
x = float(input("valor do jogo1:"))
y = int(input("valor do jogo2:"))
s1 = x + y
s2 = s1 - 25/100
round(s2,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    y = int(input())
ValueError: invalid literal for int() with base 10: '89.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:49:38) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
x = float(input("valor do jogo1:"))
y = int(input("valor do jogo2:"))
s1 = x + y
s2 = s1 - 25/100
round(s2,2)
-- EXECUTION TIME:
0.145912
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2921/main.py", line 3, in <module>
    y = int(input())
ValueError: invalid literal for int() with base 10: '89.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:50:06) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
x = float(input("valor do jogo1:"))
y = int(input("valor do jogo2:"))
s1 = float(input(x + y))
s2 = int(input(s1 - 25/100))
round(s2,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    y = int(input())
ValueError: invalid literal for int() with base 10: '89.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:50:41) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
x = float(input("valor do jogo1:"))
y = int(input("valor do jogo2:"))
s1 = 100
s2 = float(input(s1 - 25/100))
round(s2,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    y = int(input())
ValueError: invalid literal for int() with base 10: '89.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:51:13) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
x = float(input("valor do jogo1:"))
y = int(input("valor do jogo2:"))
s1 = 100
s2 = 125
round(s2,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    y = int(input())
ValueError: invalid literal for int() with base 10: '89.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:51:19) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
x = float(input("valor do jogo1:"))
y = int(input("valor do jogo2:"))
s1 = 100
s2 = 125
round(s2,2)
-- EXECUTION TIME:
0.202931
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2921/main.py", line 3, in <module>
    y = int(input())
ValueError: invalid literal for int() with base 10: '89.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:52:59) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
a = print (50 - (25/100))
x = float(input("valor do jogo1:"))
y = a
round(a,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    round(a,2)
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:53:16) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
a = print (50 - (25/100))
x = float(input("valor do jogo1:"))
y = a
round(y,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    round(y,2)
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:53:44) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
a = print (50 - (25/100))
x = float(input("valor do jogo1:"))
y = int(input("valor do jogo2:"))
round(,2)
-- ERROR:
File "XXXX", line 5
    round(,2)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:53:45) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
a = print (50 - (25/100))
x = float(input("valor do jogo1:"))
y = int(input("valor do jogo2:"))
round(,2)
-- EXECUTION TIME:
0.126249
-- ERROR:
  File "/home/codebench/codes/1616/2921/main.py", line 5
    round(,2)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:53:46) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
a = print (50 - (25/100))
x = float(input("valor do jogo1:"))
y = int(input("valor do jogo2:"))
round(,2)
-- ERROR:
File "XXXX", line 5
    round(,2)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:54:06) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
a = print(50 - (25/100))
x = float(input("valor do jogo1:"))
y = int(input("valor do jogo2:"))
print(round(y,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = int(input())
ValueError: invalid literal for int() with base 10: '89.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:54:14) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
a = print(50 - (25/100))
x = float(input("valor do jogo1:"))
y = int(input("valor do jogo2:"))
print(round(y,2))
-- EXECUTION TIME:
0.157633
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2921/main.py", line 4, in <module>
    y = int(input())
ValueError: invalid literal for int() with base 10: '89.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:54:20) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
a = print(50 - (25/100))
x = float(input("valor do jogo1:"))
y = int(input("valor do jogo2:"))
print(round(y,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = int(input())
ValueError: invalid literal for int() with base 10: '89.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:54:29) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
a = print(50 - (25/100))
x = float(input("valor do jogo1:"))
y = int(input("valor do jogo2:"))
print(round(y,2))
-- EXECUTION TIME:
0.148626
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2921/main.py", line 4, in <module>
    y = int(input())
ValueError: invalid literal for int() with base 10: '89.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:54:46) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
a = print(50 - (25/100))
x = float(input("valor do jogo1:"))
y = int(input("valor do jogo2:"))
round(y,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = int(input())
ValueError: invalid literal for int() with base 10: '89.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:54:52) 
-- CODE:
#totaljogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
a = print(50 - (25/100))
x = float(input("valor do jogo1:"))
y = int(input("valor do jogo2:"))
round(y,2)
-- EXECUTION TIME:
0.188054
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2921/main.py", line 4, in <module>
    y = int(input())
ValueError: invalid literal for int() with base 10: '89.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
